# win32_api

./: .gitignore  CMakeLists.txt  dependencies.bsc
include/: main.h  menu.h  window.h  window_manager.h
src/: CMakeLists.txt  main.c  main.h
src/components/: menu.c  submenu.c  submenu.h
src/window/: window.c  window.h  window_manager.c
test/: CMakeLists.txt
